hphp/hack/test/typecheck/variadic_args2.php.exp
File "variadic_args2.php", line 3, characters 12-36:
A variadic parameter `...` must not have a default value. (Parsing[1002])
